--- a/_posts/2019-11-27-我的第一篇blog.md
+++ b/_posts/2019-11-27-我的第一篇blog.md
@@ -2,14 +2,14 @@
 layout:     post
 title:      新的开始
 subtitle:   第一篇blog
-date:       2016-12-01
+date:       2019-11-27
 author:     BY
 header-img: img/mam-1.jpg
 catalog: true
 tags:
-    - git
-    - jekyll
-    - blog
+    - Git
+    - Jekyll
+    - Blog
 ---
 
  # 这是我搭建的第一个blog！
@@ -18,13 +18,13 @@ tags:
  
  ## 搭建过程使用的软件
  
- * git
+ * Git
  
- * ruby
+ * Ruby
  
- * rubygems
+ * Rubygems
  
- * jekyll
+ * Jekyll
  
- * subline3
+ * Subline3
  
