--- a/_posts/2019-11-27-我的第一篇blog.md
+++ b/_posts/2019-11-27-我的第一篇blog.md
@@ -3,7 +3,7 @@ layout:     post
 title:      新的开始
 subtitle:   第一篇blog
 date:       2019-11-27
-author:     BY
+author:     One-Punch-Man
 header-img: img/mam-1.jpg
 catalog: true
 tags:
@@ -12,19 +12,19 @@ tags:
     - Blog
 ---
 
- # 这是我搭建的第一个blog！
+# 这是我搭建的第一个blog！
  
  这第一篇blog就当纪念一下自己的努力吧！
  
- ## 搭建过程使用的软件
+## 搭建过程使用的软件
  
- * Git
+* Git
  
- * Ruby
+* Ruby
  
- * Rubygems
+* Rubygems
  
- * Jekyll
+* Jekyll
  
- * Subline3
+* Subline3
  
