--- a/_posts/2019-11-27-我的第一篇blog.md
+++ b/_posts/2019-11-27-我的第一篇blog.md
@@ -4,7 +4,7 @@ title:      新的开始
 subtitle:   第一篇blog
 date:       2019-11-27
 author:     One-Punch-Man
-header-img: img/mam-1.jpg
+header-img: "img/man-3.jpg"
 catalog: true
 tags:
     - Git
