--- a/_posts/2019-11-27-Markdown的初步认识.md
+++ b/_posts/2019-11-27-Markdown的初步认识.md
@@ -1,1 +1,13 @@
-
+---
+layout:     post
+title:      Markdown的初步认识
+subtitle:   第一次接触Markdowm
+date:       2019-11-27
+author:     One-Punch-Man
+header-img: "img/man-4.jpg"
+catalog: true
+tags:
+    - Markdown
+    - Blog
+---
+> Markdown 是一种轻量级的「标记语言」.
