--- a/_posts/2019-11-27-Markdown的初步认识.md
+++ b/_posts/2019-11-27-Markdown的初步认识.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      Markdown的初步认识
-subtitle:   第一次接触Markdowm
+subtitle:   第一次接触Markdown
 date:       2019-11-27
 author:     One-Punch-Man
 header-img: "img/man-4.jpg"
