第一次修改（二补）

--- a/_posts/2019-11-28-和Git的第一次见面.md
+++ b/_posts/2019-11-28-和Git的第一次见面.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      新的开始
+title:      Git之基本认识
 subtitle:   和Git的第一次见面
 date:       2019-11-28
 author:     One-Punch-Man
