--- a/_posts/2019-11-28-和Git的第一次见面.md
+++ b/_posts/2019-11-28-和Git的第一次见面.md
@@ -41,3 +41,53 @@ git最初的开发动力来自于BitKeeper和Monotone。git最初只是作为一
   
 **Your Name**和**email@example.com**需要填写你自己所拥有的。
 
+# 创立版本库
+
+> 版本库又名仓库，英文名**repository**，你可以简单理解成一个目录，这个目录里面的所有文件都可以被Git管理起来，每个文件的修改、删除，Git都能跟踪，以便任何时刻都可以追踪历史，或者在将来某个时刻可以“还原”。
+
+
+**第一步:** 选择一个你想建立仓库的地方，然后
+
+    $ mkdir study           建立一个叫study的仓库
+    $ cd learngit           进入study仓库
+    $ pwd                   显示当前仓库所在的目录
+
+**在windows系统上，请一定确保自己所建立的仓库所在的目录路径(包括仓库名)不能包含中文。**
+
+**第二步：**
+    
+    $ git init               把study变成可以由git的Repository
+    
+执行完`git init`后，当你打开study文件夹时，你会发现会里面有一个`.git`的文件夹，这个是Git来跟踪管理版本库的，没事千万不要手动修改这个目录里面的文件，不然改乱了，就把Git仓库给破坏了。如果你没有看到`.git`目录，那是因为这个目录默认是隐藏的，用`ls -ah`命令就可以看见。也不一定必须在空目录下创建Git仓库，选择一个已经有东西的目录也是可以的。
+
+# 添加文件到Git仓库
+
+首先嘛，你的本地仓库里面要有文件。所以，赶快去创建一个文件吧！(如果有请忽略......)
+
+然后开始干活！
+
+    $ git add file1.txt                
+    $ git commit -m "add 3 files."
+    
+这两句代码的意思是把study下的文件file1.txt添加仓库，`"add 3 files."`是对本次提交的说明。
+
+如果你想一次性提交多次改动。那么，你需要这样：
+
+    $ git add .                
+    $ git commit -m "add all"
+    
+ 和上面一样，只不过这一次是提交**不止一个**给仓库(提交一个也可以这么写)。
+ 
+ ### 哎呀！断片了！
+ 
+ 当你突然断片了，不知道你上一秒做了什么或者你突然就什么都记不起来了！怎么办？没事，有这个：
+ 
+    $ git status
+    
+ `git status`命令可以让我们时刻掌握仓库当前的状态。你可以根据当前的状态会想起你做过了什么。什么？你还想知道更详细的？那好吧！我们还有：
+ 
+    $ git diff file1.txt
+    
+`git diff`后面加上你所想要查看的文件，你可以查看你对这一个文件所做的操作后的内容。(修改内容)
+
+**总而言之，在每一次`git add`和`git commit`后面使用`git status`可以帮助你查看你的所作所为，帮你减少犯错的可能！**
