--- a/_posts/2019-11-28-和Git的第一次见面.md
+++ b/_posts/2019-11-28-和Git的第一次见面.md
@@ -91,3 +91,35 @@ git最初的开发动力来自于BitKeeper和Monotone。git最初只是作为一
 `git diff`后面加上你所想要查看的文件，你可以查看你对这一个文件所做的操作后的内容。(修改内容)
 
 **总而言之，在每一次`git add`和`git commit`后面使用`git status`可以帮助你查看你的所作所为，帮你减少犯错的可能！**
+
+### 历史纪录
+
+当你的提交次数一次次增加，你突然想知道你提交的总共记录，那么，怎么办呢？没事，有它在：
+
+    $ git log
+ 
+`git log`命令可以显示从最近到最远的提交记录。`commit`表示的是版本号，`Author`说明是谁提交的，`Date`表明你所提交的时间，在这三个的后面会有一个你很熟悉的字符串，没错，那就是你的**提交说明**，如果你嫌弃它的”花里胡哨“，那么你可以：
+
+    $ git log --pretty=oneline
+
+这样就舒服多了!显示的字符串你可以和前面自行匹配。行动吧，骚年！尝试着独自思考吧！
+
+### 我后悔了！
+
+当你发现你提交的是错误的文档，或者你发现这一次的修改并没有以前的某一个版本好，我们可以试试这个：
+
+    $ git reset --hard HEAD^
+
+这样你就可以回到上一次你所提交的时候了。什么？你不相信！那么你可以试试这个：
+    
+    $ cat file1.txt
+
+你会清晰的发现`file1.txt`中显示的是你上一次提交的文档内容。是不是很神奇啊！什么？你还想回到上上个文档！emmmm好吧！如你所愿：
+
+    $ git reset --hard HEAD^^
+    
+现在你用前面用过的`git log`查看一下。好了，满意了吧！事实上，如果你想回到更早的版本，也是可以得，只不过你需要在`HEAD`上加上相应的`^`，或者你可以`HEAD~你所要回溯的版本`。
+
+又怎么了！！！！搞什么？你觉得这个版本不好，你想回去了？拿你没办法！走！上车！
+
+
