--- a/_posts/2019-11-28-和Git的第一次见面.md
+++ b/_posts/2019-11-28-和Git的第一次见面.md
@@ -30,6 +30,22 @@ git最初的开发动力来自于BitKeeper和Monotone。git最初只是作为一
 
 **分布式版本控制系统**根本没有“中央服务器”，每个人的电脑上都是一个完整的版本库，这样，你工作的时候，就不需要联网了，因为版本库就在你自己的电脑上。
 
+
+# 工作区（Working Directory）和暂存区（stage）
+
+> Git和其他版本控制系统如SVN的一个不同之处就是有**暂存区**的概念。
+
+**工作区**就是你在电脑里面进行操作的文件夹，而这个目录里面有一个`.git`的目录，这就是版本库（Repository）；这里面有很多重要的东西，所以没有很重要的事千万不要对它修改！其中里面最重要的就是**暂存区（stage）**。
+
+
+![](https://www.liaoxuefeng.com/files/attachments/919020037470528/0)
+
+
+
+所以在后面使用的`git add `其实就是把你对文件的操作添加到**暂存区（stage）**；再输入`git commit`你就可以把当前暂存区（stage）的所有东西提交给了当前**分支（master）**。
+
+
+
 # windows下Git的安装
 
 直接从[Git](https://git-scm.com/downloads)的官网上下载，然后默认安装就可以了。安装完以后打开菜单，搜索**git bash**，打开如果出现一个像cmd命令行窗口的东西，就说明安装成功了。
@@ -78,7 +94,9 @@ git最初的开发动力来自于BitKeeper和Monotone。git最初只是作为一
     
  和上面一样，只不过这一次是提交**不止一个**给仓库(提交一个也可以这么写)。
  
- ### 哎呀！断片了！
+ 
+ ###  哎呀！断片了！
+ 
  
  当你突然断片了，不知道你上一秒做了什么或者你突然就什么都记不起来了！怎么办？没事，有这个：
  
@@ -98,7 +116,7 @@ git最初的开发动力来自于BitKeeper和Monotone。git最初只是作为一
 
     $ git log
  
-`git log`命令可以显示从最近到最远的提交记录。`commit`表示的是版本号，`Author`说明是谁提交的，`Date`表明你所提交的时间，在这三个的后面会有一个你很熟悉的字符串，没错，那就是你的**提交说明**，如果你嫌弃它的”花里胡哨“，那么你可以：
+`git log`命令可以显示从最近到最远的提交历史。`commit`表示的是版本号，`Author`说明是谁提交的，`Date`表明你所提交的时间，在这三个的后面会有一个你很熟悉的字符串，没错，那就是你的**提交说明**，如果你嫌弃它的”花里胡哨“，那么你可以：
 
     $ git log --pretty=oneline
 
@@ -121,5 +139,15 @@ git最初的开发动力来自于BitKeeper和Monotone。git最初只是作为一
 现在你用前面用过的`git log`查看一下。好了，满意了吧！事实上，如果你想回到更早的版本，也是可以得，只不过你需要在`HEAD`上加上相应的`^`，或者你可以`HEAD~你所要回溯的版本`。
 
 又怎么了！！！！搞什么？你觉得这个版本不好，你想回去了？拿你没办法！走！上车！
+
+    $ git reflog
+
+`git reflog`可以查看所有分支的所有操作记录（包括提交、回退、已删除的提交操作记录等）。找到你想要的版本。每一次命令前面几位字符串是它的版本号，你可以
+
+    $ git reset --hard 版本号
+
+这样，你就可以任意选择你写过的文档了！
+
+
 
 
