--- a/_posts/2019-11-28-和Git的第一次见面.md
+++ b/_posts/2019-11-28-和Git的第一次见面.md
@@ -42,7 +42,7 @@ git最初的开发动力来自于BitKeeper和Monotone。git最初只是作为一
 
 
 
-所以在后面使用的`git add `其实就是把你对文件的操作添加到**暂存区（stage）**；再输入`git commit`你就可以把当前暂存区（stage）的所有东西提交给了当前**分支（master）**。
+所以在后面使用的`git add `其实就是把你对文件的操作添加到**暂存区（stage）**；再输入`git commit`你就可以把当前暂存区（stage）的所有东西提交给了当前**分支（master）**。如果你有多次修改，那么你每一次修改都必须提交给暂存区（stage），否则没有提交的暂存区（stage）的操作是不会提交给分支（master）。
 
 
 
@@ -148,6 +148,37 @@ git最初的开发动力来自于BitKeeper和Monotone。git最初只是作为一
 
 这样，你就可以任意选择你写过的文档了！
 
+### 撤销修改
+
+> 当你改乱了工作区某个文件的内容，想直接丢弃工作区的修改时，用命令`git checkout -- file`。
+
+> 当你不但改乱了工作区某个文件的内容，还添加到了暂存区时，想丢弃修改，就要分两步。第一步用命令`git reset HEAD <file>`，这样你就可以回到file在工作区的状态；然后`git checkout -- file`，这样你在工作区对file的修改也撤销了。好了！完美收官！
+
+> 如果你已经提交给版本库，那么你就要使用版本回退（`git reset -- hard HEAD^`）。**前提你没有推送到远程库！**
+
+### 删除操作
+
+当你的工作区和版本库都有一个叫`file.txt`的文件，你使用了：
+
+    $ rm file.txt
+    
+这样你就把工作区的file.txt文件删除，然而版本库的file.txt却没有被删除。
+
+如果你的确想删除file.txt文件，那么
+    
+    $ git rm file.txt      
+    $ git commit -m "remove file.txt"
+
+或者：
+
+        $ git add file.txt      
+        $ git commit -m "remove file.txt"
+
+这样你在版本库的file.txt文件也被删除了。如果你是一不小心手抖了删错了，那么你可以
+
+    $ git checkout -- file.txt
+
+你就可以回到file.txt的最新版本。如果被删除的文件没有添加到版本库过，那么你是无法使用`git checkout`的。
 
 
 
