--- a/_posts/2019-11-28-和Git的第一次见面.md
+++ b/_posts/2019-11-28-和Git的第一次见面.md
@@ -95,7 +95,7 @@ git最初的开发动力来自于BitKeeper和Monotone。git最初只是作为一
  和上面一样，只不过这一次是提交**不止一个**给仓库(提交一个也可以这么写)。
  
  
- ### 哎呀！断片了！
+ ### 哎呀断片了
  
  
  当你突然断片了，不知道你上一秒做了什么或者你突然就什么都记不起来了！怎么办？没事，有这个：
