--- a/_posts/2019-11-28-和Git的第一次见面.md
+++ b/_posts/2019-11-28-和Git的第一次见面.md
@@ -6,7 +6,8 @@ date:       2019-11-28
 author:     One-Punch-Man
 header-img: "img/man-4.jpg"
 catalog: true
-tags: - Git
+tags: 
+        - Git
 ---
 
 
