--- a/_posts/2019-11-28-和Git的第一次见面.md
+++ b/_posts/2019-11-28-和Git的第一次见面.md
@@ -93,13 +93,11 @@ git最初的开发动力来自于BitKeeper和Monotone。git最初只是作为一
     $ git add .                
     $ git commit -m "add all"
     
- 和上面一样，只不过这一次是提交**不止一个**给仓库(提交一个也可以这么写)。
- 
- 
+和上面一样，只不过这一次是提交**不止一个**给仓库(提交一个也可以这么写)。
 
- ### 断片了
- 
- 
+
+### 断片了！
+
  
 当你突然断片了，不知道你上一秒做了什么或者你突然就什么都记不起来了！怎么办？没事，有这个：
  
@@ -184,4 +182,89 @@ git最初的开发动力来自于BitKeeper和Monotone。git最初只是作为一
 你就可以回到file.txt的最新版本。如果被删除的文件没有添加到版本库过，那么你是无法使用`git checkout`的。
 
 
+# 连接远程库
 
+首先，你要去[Github官网](https://github.com/)注册一个账号。
+
+然后，打开用户主目录（我的是C:\Users\admin），看有没有`.ssh`，有再打开该文件。看有没有`id_rsa`和`id_rsa.pub`两个文件。如果没有的话，打开 `git bash`,
+
+     $ ssh-keygen -t rsa -C "youremail@example.com"
+ 
+ 然后一路回车建就可以了。（默认值就可以）
+ 
+ 最后，登陆GitHub，打开“Account settings”，“SSH Keys”页面：然后，点“Add SSH Key”，填上任意Title，在Key文本框里粘贴`id_rsa.pub`文件的内容：
+ 点“Add Key”，你就应该看到已经添加的Key。
+ 
+ ### 关联远程库
+ 
+首先，登陆GitHub，然后，在右上角找到“Create a new repo”按钮，创建一个新的仓库。
+
+在Repository name填入和你本地目录一样的名字（study），其他保持默认设置，点击“Create repository”按钮，就成功地创建了一个新的Git仓库；
+然后再本地仓库下运行`git bash`，
+     
+     $ git remote add origin git@github.com:你的Github账号/仓库名.git
+
+第一次推送时，
+     
+     $ git push -u origin master
+
+这样你就可以把你在本地库`git commit`时的文件推送到远程库（origin）。
+
+> 由于远程库是空的，我们第一次推送`master`分支时，加上了`-u`参数，Git不但会把本地的`master`分支内容推送的远程新的`master`分支，还会把本地的`master`分支和远程的`master`分支关联起来，在以后的推送或者拉取时就可以**简化**命令。
+
+以后推送到远程库（origin）就可以使用：
+
+     $ git push origin master
+
+当你第一次使用Git的`clone`或者`push`命令连接GitHub时，会得到一个警告：
+
+     The authenticity of host 'github.com (xx.xx.xx.xx)' can't be established.
+     RSA key fingerprint is xx.xx.xx.xx.xx.
+     Are you sure you want to continue connecting (yes/no)?
+
+这里你输入`yes`就可以了。然后会弹出一个警告，不需要理它。
+
+     Warning: Permanently added 'github.com' (RSA) to the list of known hosts.
+
+ 
+ ### 从远程库下载
+ 
+ 打开你创建的本地库（study），
+     
+     $ git clone git@github.com:Github账号/仓库名.git
+
+打开你本地库（study），你会发现里卖弄多了一个文件夹，这就是你想在Github远程库上下载到本地的仓库（也就是项目）。
+
+
+### 查看当前的远程库
+
+如果你想查看当前有什么远程库，
+
+     $ git remote
+
+如果你想看每个远程库的实际链接地址，
+
+     $ git remote -v
+
+### 本地库的更新
+
+当你在远程库上对文件进行操作，你又想把它更新到本地库上。
+
+     $ git fetch origin                        从远程仓库下载新分支与数据
+     
+     $ git merge origin/master                  从远端仓库提取数据并尝试合并到当前分支
+
+也可以使用
+
+     $ git pull origin master
+
+在默认模式下，`git pull`是`git fetch`后跟`git merge FETCH_HEAD`的缩写。在实际使用中，`git fetch`更安全一些，因为在`merge`前，我们可以查看更新情况，然后再决定是否合并。
+
+### 删除远程库
+
+     git remote rm [远程库名字]
+
+
+# 总结
+
+总结了一下在刚开始使用Git时需要注意的问题，以及比较常用的命令。对于现在的我应该是够用了吧。在下一次学习Git的时候在写一篇关于它的理论blog。加油！奥利给！
