--- a/_posts/2019-11-28-和Git的第一次见面.md
+++ b/_posts/2019-11-28-和Git的第一次见面.md
@@ -204,6 +204,10 @@ git最初的开发动力来自于BitKeeper和Monotone。git最初只是作为一
      
      $ git remote add origin git@github.com:你的Github账号/仓库名.git
 
+或者：
+     
+     $ git remote add origin https://github.com/你的Github账号/仓库名.git
+
 第一次推送时，
      
      $ git push -u origin master
