--- a/_posts/2019-12-2-HTML之基础.md
+++ b/_posts/2019-12-2-HTML之基础.md
@@ -53,9 +53,14 @@ tags:
 
 * `<title>`元素描述了文档的标题。
 
-* `<meta charset="utf-8">`定义网页编码格式为 utf-8。
+* `<meta charset="utf-8">`定义网页编码格式为`utf-8`。`name`和`content`这两个属性对于定义你的页面的作者和提供页面的简要描述是很有用的 。
+`name`指定了`meta`元素的类型；说明该元素包含了什么类型的信息。`content`指定了实际的元数据内容。
 
-* `<link rel="stylesheet" type="text/css" href=""/>`导入css样式文件。
+   > `name = "author"`指定作者在某些情况下是很有用的：如果你需要联系页面的作者，问一些关于页面内容的问题。 一些内容管理系统能够自动获取页面作者的信息，然后用于某些用途。
+     
+   > `name="description"`指定包含关于页面内容的关键字的页面内容的描述是很有用的，因为它可能或让你的页面在搜索引擎的相关的搜索出现得更多（这些行为术语上被称为 Search Engine Optimization, or SEO.）
+
+* `<link rel="stylesheet" type="text/css" href=""/>`导入css样式文件。`<link>`元素经常位于文档的头部，`rel="stylesheet"`表明这是文档的样式表，而`href`包含了样式表文件的路径.
 
 * `<body>`元素包含了可见的页面内容。
 
@@ -63,9 +68,9 @@ tags:
 
 * `<p>`元素定义一个段落。使它单独一行出现。
 
-* `<em>`元素可以使其中的内容变成斜体强调。
+* `<em>`元素可以使其中的内容变成斜体强调。主要是起强调作用，便于屏幕器识别，而不是用于斜体。如果只是为了斜体，可以使用`<i>`。
 
-* `<strong>`表示元素里面的内容被着重强调(粗体显示)！
+* `<strong>`表示元素里面的内容被着重强调(粗体显示)！但是如果你只是想使用粗体这一风格，那么你不应该适用`<strong>`,而是使用`<b>`。
 
 * `<a>`定义一个超链接，实现点击进行页面跳转功能。`href`这个属性声明超链接的web地址，当这个链接被点击浏览器会跳转至`href`声明的web地址。
 `title`这个属性为超链接声明额外的信息，当鼠标悬浮时，将出现一段说明提示。`target`属性用于指定链接如何呈现出来。
@@ -77,21 +82,60 @@ tags:
 （布尔属性类型，他们只能有跟它的属性名一样的属性值。）可以让输入框变为状态(变灰色)，
 此时用户不能向他们输入任何数据。
 
-* `<>`
+* `<script>`元素没必要非要放在文档头部；实际上，把它放在文档的尾部（在`</body>`标签之前）是一个更好的选择，这样可以确保在加载脚本之前浏览器已经解析了`HTML`内容（如果脚本加载某个不存在的元素，浏览器会报错）。
 
-* `<>`
+* `<ul>`定义一个无序的列表。（Unordered List）
 
-* `<>`
+* `<ol>`定义一个有序的列表。(Ordered List)
 
-* `<>`
+* `<li>`元素中包含整个列表中的每一行数据。
 
-* `<>`
+     例如当你输入：
+     
+      <ul>
+           <li>豆浆</li>
+           <li>油条</li>
+           <li>豆汁</li>
+           <li>焦圈</li>
+      </ul>
 
-* `<>`
+     就会输出：
+     * 豆浆
+     * 油条
+     * 豆汁
+     * 焦圈
 
-* `<>`
+     当你输入：
+          
+          <ol>
+            <li>沿着条路走到头</li>
+            <li>右转</li>
+            <li>直行穿过第一个十字路口</li>
+            <li>在第三个十字路口处左转</li>
+            <li>继续走 300 米，学校就在你的右手边</li>
+          </ol>
+     
+     就会输出：
+     1. 沿着条路走到头
+     
+     2. 右转
+     
+     3. 直行穿过第一个十字路口
+     
+     4. 在第三个十字路口处左转
+     
+     5. 继续走 300 米，学校就在你的右手边
+         
+     
 
-* `<>`
+
+* `<u>`被用来传达传统上用下划线表达的意义：专有名词，拼写错误……
+
+* `<b>`被用来传达传统上用粗体表达的意义：关键字，产品名称，引导句……
+
+* `<i>`被用来传达传统上用斜体表达的意义：外国文字，分类名称，技术术语，一种思想……
+
+> 一点小小的总结：关于`<em>`、`<strong>`和`<i>`、`<b>`。如果你只是单纯的想对当前操作的一系列数据给予一个你想要的风格样式，而没有其他的要求的话，最好使用`<i>`或者`<b>`；如果你还想引起浏览器对你写的内容给予特别的关注，那么你可以使用`<em>`或者`<strong>`。`<em>`、`<strong>`可访问性，SEO（搜索引擎优化）等非常重要。比如，当你给某些字段用`<strong></strong>`包裹住，那么搜索引擎会重点根据你包裹住的字段与用户的输入进行匹配。（还有爬虫技术也主要根据`<em>`）
 
 * `<>`
 
