--- a/_posts/2019-12-2-HTML之基础.md
+++ b/_posts/2019-12-2-HTML之基础.md
@@ -129,7 +129,7 @@ tags:
      
 
 
-* `<u>`被用来传达传统上用下划线表达的意义：专有名词，拼写错误……
+* `<u>`被用来传达传统上用下划线表达的意义：专有名词，拼写错误……**在Web上，最好只在链接上使用下划线。**
 
 * `<b>`被用来传达传统上用粗体表达的意义：关键字，产品名称，引导句……
 
