--- a/_posts/2019-12-2-HTML之基础.md
+++ b/_posts/2019-12-2-HTML之基础.md
@@ -36,9 +36,9 @@ tags:
 
 * **行内块标签** ：`<img>`;`<input>`;`<textarea>`;`<button>`;`<th>`;`<td>`。
 
-  **特点：结合的行内和块级的有点，不仅可以对宽高属性值生效，还可以多个标签存在一行显示。（不会换行，有宽高。）**
+  **特点：结合的行内和块级的优点，不仅可以对宽高属性值生效，还可以多个标签存在一行显示。（不会换行，有宽高。）**
   
-  **`display:inline;`把块级标签转换为行内标签；`display:block;`把行内标签转换为块级标签；`display：inline-block;`把转换为行内块标签。**
+  **`display:inline;`把块级标签转换为行内标签；`display:block;`把行内标签转换为块级标签；`display：inline-block;`把其它两种标签转换为行内块标签。**
 
   
 ### 简易标签
@@ -75,6 +75,12 @@ tags:
 * `<a>`定义一个超链接，实现点击进行页面跳转功能。`href`这个属性声明超链接的web地址，当这个链接被点击浏览器会跳转至`href`声明的web地址。
 `title`这个属性为超链接声明额外的信息，当鼠标悬浮时，将出现一段说明提示。`target`属性用于指定链接如何呈现出来。
 例如，`target="_blank"`会使链接在新的页面中显示。如果你希望链接在目前标签页显示链接，只需忽略这个属性。
+
+*  > `URL` :统一资源定位符（Uniform Resource Locator或称统一资源定位器、定位地址、URL地址，俗称网页地址或简称网址；是因特网上标准的资源的地址（Address），如同在网络上的门牌。
+
+* >`绝对URL`:指向由其在Web上的绝对位置定义的位置，包括 protocol(协议) and domain name（域名）。不管绝对URL在哪里使用，它总是指向确定的相同位置。
+* >`相对URL`:指向与您链接的文件相关的位置。
+     > **当链接到同一网站的其他位置时，你应该使用相对链接;而当链接到另一个网站时，你需要使用绝对链接。**
 
 * `<img>`在所在的位置插入一张图片。
 
@@ -137,13 +143,13 @@ tags:
 
 > 一点小小的总结：关于`<em>`、`<strong>`和`<i>`、`<b>`。如果你只是单纯的想对当前操作的一系列数据给予一个你想要的风格样式，而没有其他的要求的话，最好使用`<i>`或者`<b>`；如果你还想引起浏览器对你写的内容给予特别的关注，那么你可以使用`<em>`或者`<strong>`。`<em>`、`<strong>`可访问性，SEO（搜索引擎优化）等非常重要。比如，当你给某些字段用`<strong></strong>`包裹住，那么搜索引擎会重点根据你包裹住的字段与用户的输入进行匹配。（还有爬虫技术也主要根据`<em>`）
 
-* `<>`
 
-* `<>`
 
-* `<>`
+* `<dl>`
 
-* `<>`
+* `<dt>`
+
+* `<dd>`
 
 
 
