--- a/_posts/2019-12-2-HTML之基础.md
+++ b/_posts/2019-12-2-HTML之基础.md
@@ -254,10 +254,71 @@ tags:
 
    ![code_print](/img/print.png)
 
+* `<main>`:存放每个页面独有的内容。每个页面上只能用**一次**`<main>`，且直接位于`<body>`中。最好**不要**把它嵌套到其它元素里面。
 
+* `<article>`:包围的内容是一篇文章，与页面其它部分无关（比如一篇博文）。
 
+* `<section>`:与`<article>`类似，但`<section>`更适用于组织页面使其按功能（比如迷你地图、一组文章标题和摘要）分块。一般的最佳用法是：以**标题**作为开头；也可以把一篇`<article>`分成若干部分并分别置于不同的`<section>`中，也可以把一个区段`<section>`分成若干部分并分别置于不同的 `<article>`中，取决于上下文。
 
+* `<aside>`:侧边栏，经常嵌套在`<main>`中。里面包含了一些间接信息（术语条目、作者简介、相关链接，等等）。
 
+* `<header>`:是简介形式的内容。如果它是`<body>`的子元素，那么就是网站的全局页眉。如果它是`<article>`或`<section>`的子元素，那么它是这些部分特有的页眉（此`<header>`不是**标题`<head>`**）。
+
+* `<nav>`:导航栏。其中不应包含二级链接等内容。
+
+* `<footer>`:页脚。
+
+     例如：
+          
+          <!DOCTYPE html>
+          <html>
+            <head>
+              <meta charset="utf-8">
+              <title>二次元俱乐部</title>
+              <link href="style.css" rel="stylesheet">
+            </head>
+            <body>
+              <header> <!-- 本站所有网页的统一主标题 -->
+                <h1>聆听电子天籁之音</h1>
+              </header>
+              <nav> <!-- 本站统一的导航栏 -->
+                <ul>
+                  <li><a href="#">主页</a></li>
+                  <!-- 共n个导航栏项目，省略…… -->
+                </ul>
+                <form> <!-- 搜索栏是站点内导航的一个非线性的方式。 -->
+                  <input type="search" name="q" placeholder="要搜索的内容">
+                  <input type="submit" value="搜索">
+                </form>
+              </nav>    
+              <main> <!-- 网页主体内容 -->
+                <article>
+                  <!-- 此处包含一个 article（一篇文章），内容略…… -->
+                </article>     
+                <aside> <!-- 侧边栏在主内容右侧 -->
+                  <h2>相关链接</h2>
+                  <ul>
+                    <li><a href="#">这是一个超链接</a></li>
+                    <!-- 侧边栏有n个超链接，略略略…… -->
+                  </ul>
+                </aside>
+              </main>    
+              <footer> <!-- 本站所有网页的统一页脚 -->
+                <p>© 2050 某某保留所有权利</p>
+              </footer>
+            </body>
+          </html>
+          
+     输出：
+![page_1](/img/page_1.png)
+
+* `<span>`:无语义行内标签。标签里面使用`class`、`id`属性，使其在CSS、JS中能很好的被引用。
+
+* `<div>`:无语义块级标签。标签里面使用`class`、`id`属性，使其在CSS、JS中能很好的被引用。
+
+* `<br>`:换行标签。**（可以在把一行文字分成多行文字）**
+
+* `<hr>`:形成水平分割线的标签。
 
 
 
