--- a/_posts/2019-12-2-HTML之基础.md
+++ b/_posts/2019-12-2-HTML之基础.md
@@ -18,6 +18,16 @@ tags:
 以及移动应用程序的用户界面。网页浏览器可以读取HTML文件，并将其渲染成可视化网页。HTML描述了一个网站的结构语义随着线索的呈现
 ，使之成为一种标记语言而非编程语言。
 
+# 什么是SEO
+
+> **搜索引擎优化（SEO），是一种透过了解搜索引擎的运作规则来调整网站，以及提高目的网站在有关搜索引擎内排名的方式**。由于不少研究发现，搜索引擎的用户往往只会留意搜索结果最前面的几个条目，所以不少网站都希望透过各种形式来影响搜索引擎的排序，让自己的网站可以有优秀的搜索排名。当中尤以各种依靠广告维生的网站为甚。
+
+**所谓“针对搜索引擎作最优化的处理”，是指为了要让网站更容易被搜索引擎接受。**搜索引擎会将网站彼此间的内容做一些相关性的数据比对，然后再由浏览器将这些内容以最快速且接近最完整的方式，呈现给搜索者。搜索引擎优化就是通过搜索引擎的规则进行优化，为用户打造更好的用户体验，最终的目的就是做好用户体验。
+
+对于任何一个网站来说，要想在网站推广中获取成功，**搜索引擎优化都是至为关键的一项任务**。同时，随着搜索引擎不断变换它们的搜索排名算法规则，每次算法上的改变都会让一些排名很好的网站在一夜之间名落孙山，而失去排名的直接后果就是失去了网站固有的可观访问流量。所以每次搜索引擎算演法的改变都会在网站之中引起不小的骚动和焦虑。可以说，搜索引擎优化是一个愈来愈复杂的任务。
+
+经过许多专业的SEO研究机构调查后发现，当用户利用搜索引擎查找数据、产品或服务时，大部分人通常只会点击搜索结果当中，最前面出现的几个链接，因此，大部分的网站都希望能透过各种方式或手法来试图影响网站页面在搜索引击的排名。不过，搜索引擎的算法会不断的更新，网站的排名也会因此会有动荡，所以如果没有持续做好SEO，很快地排名就很有可能会掉下来。
+
 # HTML的标签
 
 ### 标签的简介和分类
@@ -82,7 +92,26 @@ tags:
 * >`相对URL`:指向与您链接的文件相关的位置。
      > **当链接到同一网站的其他位置时，你应该使用相对链接;而当链接到另一个网站时，你需要使用绝对链接。**
 
-* `<img>`在所在的位置插入一张图片。
+* `<img>`在所在的位置插入一张图片.`src`属性包含了指向我们想要引入的图片的路径，可以是相对路径或绝对路径。`alt`属性是对图片的文字描述，用于在图片无法显示或不能被看到的情况。`title`这个属性为图片声明额外的信息，当鼠标悬浮时，将出现一段关于图片的说明。
+
+你也可以在**CSS**或者**Javascript**中使用图片。如果图像对您的网页内容里有意义，则应使用**HTML图像**。如果图像纯粹是用来装饰的，则应使用**CSS背景图片**。
+
+* `<figure>`标签代表一段独立的内容, 经常与说明标签`<figcaption>`配合使用, 并且作为一个独立的引用单元。这个标签经常是用在主文中引用的图片，插图，表格，代码段等等，当这部分转移到附录中或者其他页面时不会影响到主体。
+
+* `<figcaption>`标签是与其相关联的图片的说明/标题，用于描述其父节点`<figure>`元素里的其他数据。这意味着`<figcaption>`在`<figure>`块里是第一个或最后一个。同时 HTML Figcaption 元素是可选的；如果没有该元素，这个父节点的图片只是会没有说明/标题,对于`<figure>`中的其它事物是没有影响的。
+     
+     例如：
+          
+          <figure>
+            <img src="https://raw.githubusercontent.com/mdn/learning-area/master/html/multimedia-and-embedding/images-in-html/dinosaur_small.jpg"
+               alt="一只恐龙头部和躯干的骨架，它有一个巨大的头，长着锋利的牙齿。"
+               width="200"
+               height="171">
+            <figcaption>曼彻斯特大学博物馆展出的一只霸王龙的化石</figcaption>
+          </figure>
+      
+     输出：
+    ![example001](/img/example001.png) 
 
 * `<input>`是使在当前位置定义一个输入框。`type`属性可以定义输入框里面输入的内容形式；`disabled = "disabled"`
 （布尔属性类型，他们只能有跟它的属性名一样的属性值。）可以让输入框变为状态(变灰色)，
