--- a/_posts/2019-12-2-HTML之基础.md
+++ b/_posts/2019-12-2-HTML之基础.md
@@ -111,7 +111,10 @@ tags:
           </figure>
       
      输出：
-    ![example001](/img/example001.png) 
+     
+ ![example001](/img/exampl001.png) 
+
+
 
 * `<input>`是使在当前位置定义一个输入框。`type`属性可以定义输入框里面输入的内容形式；`disabled = "disabled"`
 （布尔属性类型，他们只能有跟它的属性名一样的属性值。）可以让输入框变为状态(变灰色)，
