--- a/_posts/2019-12-2-HTML之基础.md
+++ b/_posts/2019-12-2-HTML之基础.md
@@ -115,6 +115,13 @@ tags:
  ![example001](/img/example001.png) 
 
 
+* `<>video`:可以在网页中插入一段视频。`src`,作用同上`img`中的`src`。`controls`:加上这个属性后，就可以允许用户控制视频的播放，包括音量，跨帧，暂停/恢复播放；不再需要用户自己定义组件。
+
+* `<source>`为`<picture>`,`<audio>`或者`<video>`元素指定多个媒体资源。这是一个空元素。它通常用于以不同浏览器支持的多种格式提供相同的媒体内容。
+
+* `<audio>`:允许在当前网页插入音频组件。`src`,作用同上`img`中的`src`。
+
+* `<iframe>`:允许您将其他Web文档嵌入到当前文档中,这很适合将第三方内容纳入您的网站，
 
 * `<input>`是使在当前位置定义一个输入框。`type`属性可以定义输入框里面输入的内容形式；`disabled = "disabled"`
 （布尔属性类型，他们只能有跟它的属性名一样的属性值。）可以让输入框变为状态(变灰色)，
