--- a/_posts/2019-12-2-HTML之基础.md
+++ b/_posts/2019-12-2-HTML之基础.md
@@ -172,7 +172,45 @@ tags:
      5. 继续走 300 米，学校就在你的右手边
          
      
+* `<table>`:把你所写的表格内容包裹在`<table>`、`</table>`中。
 
+* `<td>`:是表格中最小的单元格，代表着表格中每一个小格子。
+
+* `<th>`:是表格中最小的单元格，代表着表格中每一个小格子。**使用`<th>`小格子里面的内容会加粗，居中**。
+
+* `<tr>`: 里面包裹着若干个`<td>`,组成了一个表格中的一行。
+
+> 表格中的标题和单元格有`colspan`和`rowspan`属性,`clospan`可以增加一个单元格所占据的宽度，`rowspan`可以增加一个单元格所占据的高度。
+
+* `<colgroup>`:把表格的所有列看成整体，在里面你可以定义每一列的样式。
+
+* `<col>`:在`<col>`中你可以定义每一列的样式。
+
+> `<colgroup><col></colgroup>`为一个整体，`<colgroup></colgroup>`中可以书写多个`<col>`,并且每一个`<col>`都是按列的顺序排列的，如果你要定义第二列的样式，你需要书写两个`<col>`，第一个`<col>`里面什么都不需要写，表示第一列不需要修改什么，在第二个`<col>`中书写你想要修改第二列样式的操作。`<colgroup><col></colgroup>`的位置在`<table></table>`里面，`<tr></tr>`外面。
+
+   例如：
+          
+          <table>
+            <colgroup>
+              <col>
+              <col style="background-color: yellow">
+            </colgroup>
+            <tr>
+              <th>Data 1</th>
+              <th>Data 2</th>
+            </tr>
+            <tr>
+              <td>Calcutta</td>
+              <td>Orange</td>
+            </tr>
+            <tr>
+              <td>Robots</td>
+              <td>Jazz</td>
+            </tr>
+          </table>
+     
+   输出：
+   ![example002](/img/example002.png)
 
 * `<u>`被用来传达传统上用下划线表达的意义：专有名词，拼写错误……**在Web上，最好只在链接上使用下划线。**
 
