--- a/_posts/2019-12-2-HTML之基础.md
+++ b/_posts/2019-12-2-HTML之基础.md
@@ -115,7 +115,7 @@ tags:
  ![example001](/img/example001.png) 
 
 
-* `<>video`:可以在网页中插入一段视频。`src`,作用同上`img`中的`src`。`controls`:加上这个属性后，就可以允许用户控制视频的播放，包括音量，跨帧，暂停/恢复播放；不再需要用户自己定义组件。
+* `<video>`:可以在网页中插入一段视频。`src`,作用同上`img`中的`src`。`controls`:加上这个属性后，就可以允许用户控制视频的播放，包括音量，跨帧，暂停/恢复播放；不再需要用户自己定义组件。
 
 * `<source>`为`<picture>`,`<audio>`或者`<video>`元素指定多个媒体资源。这是一个空元素。它通常用于以不同浏览器支持的多种格式提供相同的媒体内容。
 
@@ -211,6 +211,10 @@ tags:
      
    输出：
    ![example002](/img/example002.png)
+   
+ * `<caption>`作用是展示一个表格的标题， 它常常作为`<table>`的第一个子元素出现，同时显示在表格内容的最前面，但是，它同样可以被CSS样式化，所以，它同样可以出现在任何一个一个相对于表格的做任意位置。
+ 
+ 
 
 * `<u>`被用来传达传统上用下划线表达的意义：专有名词，拼写错误……**在Web上，最好只在链接上使用下划线。**
 
