--- a/_posts/2019-12-2-HTML之基础.md
+++ b/_posts/2019-12-2-HTML之基础.md
@@ -121,11 +121,27 @@ tags:
 
 * `<audio>`:允许在当前网页插入音频组件。`src`,作用同上`img`中的`src`。
 
-* `<iframe>`:允许您将其他Web文档嵌入到当前文档中,这很适合将第三方内容纳入您的网站，
+* `<iframe>`:允许您将其他Web文档嵌入到当前文档中,这很适合将第三方内容纳入您的网站。
 
-* `<input>`是使在当前位置定义一个输入框。`type`属性可以定义输入框里面输入的内容形式；`disabled = "disabled"`
-（布尔属性类型，他们只能有跟它的属性名一样的属性值。）可以让输入框变为状态(变灰色)，
-此时用户不能向他们输入任何数据。
+* `<form>`:定义一个表单，所有的表单内容都书写在`<form></form>`中。`action` 属性定义了在提交表单时,应该把所收集的数据送给谁(URL)去处理。
+ `method`属性定义了发送数据的HTTP方法(它可以是“get”或“post”)。
+ 
+ * `<fieldset>`:通常用来对表单中的控制元素进行分组(也包括`label`元素)。
+ 
+ * `<legend>`:表示它的父元素`<fieldset>`所书写的的内容的标题。
+ 
+ * `<label>`:标签里面可以书写文本，通常与`<input>`连用。当你想点击`<label>`标签包裹的本文来激活`<input>`标签时，你需要给`<input>`一个`id`属性，并且`<label>`需要一个`for`属性，其值和`input`的`id`一样。
+
+* `<input>`是使在当前位置定义一个输入框。
+     * `type`属性可以定义输入框里面输入的内容形式。当`type`的值为：
+          
+          * button：无缺省行为按钮。
+     
+     * `placeholder`: 这是文本输入框中会出现的文本，以虚的文本形式出现，用来简略描述输入框的目的。
+     
+     * `disabled = "disabled"`（布尔属性类型，他们只能有跟它的属性名一样的属性值。）可以让输入框变为状态(变灰色)，此时用户不能向他们输入任何数据。
+     
+     * `readonly = "redonly"`:这个布尔属性用于指明用户无法修改控件的值。
 
 * `<script>`元素没必要非要放在文档头部；实际上，把它放在文档的尾部（在`</body>`标签之前）是一个更好的选择，这样可以确保在加载脚本之前浏览器已经解析了`HTML`内容（如果脚本加载某个不存在的元素，浏览器会报错）。
 
