--- a/_posts/2019-12-2-HTML之基础.md
+++ b/_posts/2019-12-2-HTML之基础.md
@@ -90,6 +90,7 @@ tags:
 
 * >`绝对URL`:指向由其在Web上的绝对位置定义的位置，包括 protocol(协议) and domain name（域名）。不管绝对URL在哪里使用，它总是指向确定的相同位置。
 * >`相对URL`:指向与您链接的文件相关的位置。
+
      > **当链接到同一网站的其他位置时，你应该使用相对链接;而当链接到另一个网站时，你需要使用绝对链接。**
 
 * `<img>`在所在的位置插入一张图片.`src`属性包含了指向我们想要引入的图片的路径，可以是相对路径或绝对路径。`alt`属性是对图片的文字描述，用于在图片无法显示或不能被看到的情况。`title`这个属性为图片声明额外的信息，当鼠标悬浮时，将出现一段关于图片的说明。
@@ -135,13 +136,116 @@ tags:
 * `<input>`是使在当前位置定义一个输入框。
      * `type`属性可以定义输入框里面输入的内容形式。当`type`的值为：
           
-          * button：无缺省行为按钮。
-     
+          * `button`：无缺省行为按钮。（一个只可以点击，但是什么作用都没有的按钮！）
+          
+          * `checkbox`： 复选框。必须使用`value`属性定义此控件被提交时的值。使用`checked`属性指示控件是否被选择。
+          
+          * `radio`：单选按钮。必须使用`value`属性定义此控件被提交时的值。使用`checked`必须指示控件是否缺省被选择。在同一个"单选按钮组"中，所有单选按钮的`name`属性使用同一个值； 一个单选按钮组中只有一个单选按钮可以被选择。
+          
+          * `color`：用于指定颜色的控件。
+          
+          * `date`：用于输入日期的控件（年，月，日，不包括时间）。
+          
+          * `datetime-local`： 用于输入日期时间控件，不包含时区。
+          
+          * `email`：用于编辑 e-mail 的字段。
+          
+          * `file`：此控件可以让用户选择文件。使用`accept`属性可以定义控件可以选择的文件类型。          
+          
+          * `hidden`：不显示在页面上的控件，但它的值会被提交到服务器.
+          
+          * `image`：图片提交按钮。必须使用`src`属性定义图片的来源及使用`alt`定义替代文本。还可以使用`height`和`width`属性以像素为单位定义图片的大小。
+          
+          * `month`：用于输入年月的控件，不带时区。
+          
+          * `number`: 用于输入浮点数的控件。
+          
+          * `password`：一个值被遮盖的单行文本字段,用于输入密码。使用`maxlength`指定可以输入的值的最大长度 。                     
+          
+          * `range`：用于输入不精确值控件。如果未指定相应的属性，控件使用如下缺省值：
+               
+               * `min`：0
+               
+               * `max`：100
+               
+               * `value`：`min`+(`max`-`min`)/2，或当`max`小于`min`时使用`min`
+               
+               * `step`：1
+         
+          * `reset`：用于将表单所内容设置为缺省值的按钮。
+          
+          * `search`：用于输入搜索字符串的单行文本字段。换行会自动跳出`<input>`组件，并进行跳转。
+          
+          * `submit`：用于提交表单的按钮。           
+          
+          * `tel`：用于输入电话号码的控件；换行会自动跳出`<input>`组件，但不会执行其他语法（也就是不会跳转）。可以使用属性，比如`pattern`和`maxlength`来约束控件输入的值。
+          
+          * `text`：单行字段；换行会自动跳出`<input>`组件，并进行跳转。
+          
+          * `time`：用于输入不含时区的时间控件。
+          
+          * `url`：用于编辑URL的字段。
+          
+          * `week`：用于输入一个由星期-年组成的日期，日期不包括时.      
+          
+          > **省缺值又叫默认值。**
+              
      * `placeholder`: 这是文本输入框中会出现的文本，以虚的文本形式出现，用来简略描述输入框的目的。
      
      * `disabled = "disabled"`（布尔属性类型，他们只能有跟它的属性名一样的属性值。）可以让输入框变为状态(变灰色)，此时用户不能向他们输入任何数据。
      
      * `readonly = "redonly"`:这个布尔属性用于指明用户无法修改控件的值。
+     
+     * `autocomplete = "on"`:具有自动填充的功能。
+     
+     * `autofocus="autofocus`:如果`<input>`标签里存在此属性，当表单被呈现在网页上时，焦点会自动落在这一个`<input>`元素上
+     
+     * `form`:	如果`<input>`存在`form`属性，它表示此元素属于一个`<form>`表单，此`<form>`表单的`id`就是属性的值，如果不存在`form`属性，在页面上有`<form>`表单的情况下，`<input>`元素会属于最近的一个`<form>`表单。
+     
+     * `list`:	指向一个`id`为`list`属性值的`<datalist>`元素，`<datalist>`为这个`<input>`元素提供建议值。
+     
+     * `name`: `<input>`的名字，在提交整个表单数据时，可以用于区分属于不同`<input>`的值
+     
+     * `required="required"`:表示只有当此`<input>`元素有值时，整个表单才能提交    
+     
+     * `value`:`<input>`的默认值。
+         
+     
+* `<textarea>`:表示一个多行纯文本编辑控件。它与`<input>`的区别在于它允许用户在文本框输入**换行符**却不会退出文本框。
+     * `cols`:文本域的可视宽度。必须为正数，默认为20 (HTML5)。
+     
+     * `disabled`:禁用文本域。默认为false。
+     
+     * `autocomplete`:是否使用浏览器的记忆功能自动填充文本。
+     
+     * `autofocus`:页面加载完毕之后是否自动给本元素添加焦点。只有跟表格关联的才能使本属性生效。     
+     
+     * `maxlength`:允许用户输入的最大字符长度 (Unicode) 。未指定表示无限长度。
+     
+     * `minlength`:允许用户输入的最小字符长度(Unicode) 。
+     
+     * `name`:元素的名称。
+     
+     * `readonly`:不允许用户修改元素内文本。和`disabled`属性不同的是，这个能让用户点击和选择元素内的文本。如果在表单里，这个元素的值还是会跟随表单一起提交。
+     
+     * `required`:提示用户这个元素的内容必填。
+     
+     * `rows`:元素的输入文本的行数（显示的高度）。
+     
+     * `wrap`:指定文本换行的方式。默认为`soft`。备选值为`hard`
+     
+     * `spellcheck`:该属性设为true时，表明该元素会做拼写和语法检查。
+     
+     > 如果您想为`<input>`元素定义一个默认值，那么您必须使用`value`属性;另一方面，对于`<textarea>`元素，只需要将默认的文本放在`<textarea></textarea>`的中间就可以了。
+     
+     > `<textarea>`元素只接受文本内容；这意味着将任何HTML内容放入`<textarea>`中都呈现为纯文本内容。
+     
+* `<select>`:定义一个选择框，其中有一个或多个`<option>`元素作为子元素，每个元素都指定了其中一个可能的值。`multiple="multiple"`:表示开启多选模式。
+
+* `<optgroup>`:里面包裹着多组`<option></option>`，可以把多组相关联的`<option></option>`关联在一起。`label`的值也会显示在选项框中，不过它不可以被选择。
+
+* `<option>`:定义在`<select>`,`<optgroup>`或`<datalist>`元素中。表示为选择框中的选项。`selected`表示这一个`<option></option>`中所包裹的内容为默认选项。`value`表示如果你选择了这个`<option>`,那么它的`value`值会被提交给表单。
+
 
 * `<script>`元素没必要非要放在文档头部；实际上，把它放在文档的尾部（在`</body>`标签之前）是一个更好的选择，这样可以确保在加载脚本之前浏览器已经解析了`HTML`内容（如果脚本加载某个不存在的元素，浏览器会报错）。
 
