--- a/_posts/2019-12-2-HTML之基础.md
+++ b/_posts/2019-12-2-HTML之基础.md
@@ -150,7 +150,7 @@ tags:
           
           * `email`：用于编辑 e-mail 的字段。
           
-          * `file`：此控件可以让用户选择文件。使用`accept`属性可以定义控件可以选择的文件类型。          
+          * `file`：此控件可以让用户选择文件。被接受的文件类型可以使用`accept`属性来约束。此外，如果您想让用户选择多个文件，那么可以通过添加`multiple`属性来实现。          
           
           * `hidden`：不显示在页面上的控件，但它的值会被提交到服务器.
           
@@ -170,7 +170,7 @@ tags:
                
                * `value`：`min`+(`max`-`min`)/2，或当`max`小于`min`时使用`min`
                
-               * `step`：1
+               * `step`(用来设置关于数字的组件的步进值得大小)：1
          
           * `reset`：用于将表单所内容设置为缺省值的按钮。
           
@@ -211,7 +211,8 @@ tags:
      * `value`:`<input>`的默认值。
          
      
-* `<textarea>`:表示一个多行纯文本编辑控件。它与`<input>`的区别在于它允许用户在文本框输入**换行符**却不会退出文本框。
+* `<textarea>`:表示一个多行纯文本编辑控件。它与`<input>`的区别在于它允许用户在文本框输入**换行符**却不会退出文本框。`<textarea>`的属性有：
+
      * `cols`:文本域的可视宽度。必须为正数，默认为20 (HTML5)。
      
      * `disabled`:禁用文本域。默认为false。
@@ -246,6 +247,23 @@ tags:
 
 * `<option>`:定义在`<select>`,`<optgroup>`或`<datalist>`元素中。表示为选择框中的选项。`selected`表示这一个`<option></option>`中所包裹的内容为默认选项。`value`表示如果你选择了这个`<option>`,那么它的`value`值会被提交给表单。
 
+* `<datalist>`:`<input>`提供若干选项（`<option>`）,它的选项用于自动完成用户输入的文本;通常，这是作为一个下拉框提供给用户的，匹配在输入框中输入了的内容。`id`的值和`<input>`中`list`的值保持一样。
+
+* `<button>`:表示一个可点击的按钮，可以用在表单或文档其它需要使用简单标准按钮的地方。他的属性有：
+     
+     * `name`:`button`的名称，与表单数据一起提交。
+     
+     * `value`:`button`的初始值。它定义的值与表单数据的提交按钮相关联。当表单中的数据被提交时，这个值便以参数的形式被递送至服务器。
+     
+     * `type`:`button`的类型。
+          
+          * `submit`:此按钮将表单数据提交给服务器。如果未指定属性，或者属性动态更改为空值或无效值，则此值为默认值。
+          
+          * `reset`:此按钮重置所有组件为初始值。
+          
+          * `button`:此按钮没有默认行为。
+          
+* `<progress>`:显示一项任务的完成进度.`max`表示进度条的大小，`value`表示你完成的任务量。
 
 * `<script>`元素没必要非要放在文档头部；实际上，把它放在文档的尾部（在`</body>`标签之前）是一个更好的选择，这样可以确保在加载脚本之前浏览器已经解析了`HTML`内容（如果脚本加载某个不存在的元素，浏览器会报错）。
 
