--- a/_posts/2019-12-11-CSS之基础.md
+++ b/_posts/2019-12-11-CSS之基础.md
@@ -1,13 +1,13 @@
 ---
 layout:     post
-title:     HTML之基础
-subtitle:   简单的HTML
-date:       2019-12-2
+title:     CSS之基础
+subtitle:   简单的CSS
+date:       2019-12-11
 author:     One-Punch-Man
 header-img: "img/man-4.jpg"
 catalog: true
 tags: 
-     - HTML
+     - CSS
      - 前端
      
 ---
