--- a/_posts/2019-12-11-CSS之基础.md
+++ b/_posts/2019-12-11-CSS之基础.md
@@ -22,7 +22,7 @@ JavaScript 并存的万维网的基础技术。
 
 > 格式和内容的分离还使得针对不同的呈现方法（例如，在屏幕上，在印刷中，通过语音（通过基于语音的浏览器或屏幕阅读器）以及基于盲文的字体）以不同的样式呈现相同的标记页面变得可行。触觉设备。如果在移动设备上访问内容，CSS还具有其他格式的规则。
 
-# 使用CSS的三种方法
+## 使用CSS的三种方法
 
 * 外部样式表：外部样式表是指将CSS编写在扩展名为`.css`的单独文件中，并从`HTML<link>`元素引用它的情况：
   
@@ -56,7 +56,7 @@ JavaScript 并存的万维网的基础技术。
 > **除非你有充足的理由，否则不要这样做！**它难以维护（在需要更新时，你必须在修改同一个文档的多处地方），并且这种写法将文档结构和文档表现混合起来了，
 这使得代码变得难以阅读和理解。将不同类型的代码分开存放在不同的文档中，会让我们的工作更加清晰。
 
-# 当浏览器加载网页时
+## 当浏览器加载网页时
 
 1. 浏览器加载HTML。
 
@@ -72,7 +72,7 @@ JavaScript 并存的万维网的基础技术。
 
 ![load](https://mdn.mozillademos.org/files/11781/rendering.svg)
 
-# CSS的特性
+## CSS的特性
 
 ### 层叠性
 
