--- a/_posts/2019-12-11-CSS之基础.md
+++ b/_posts/2019-12-11-CSS之基础.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:  CSS
+title:    123
 subtitle:   简单的CSS
 date:       2019-12-11
 author:     One-Punch-Man
@@ -12,10 +12,9 @@ tags:
      
 ---
 
-## 什么是CSS？
+# 什么是CSS？
 
-> CSS又叫层叠样式表（Cascading Style Sheets），它是一种样式表语言，用于描述以HTML之类的标记语言编写的文档的表示形式。CSS是与HTML和
-JavaScript 并存的万维网的基础技术。
+> CSS又叫层叠样式表（Cascading Style Sheets），它是一种样式表语言，用于描述以HTML之类的标记语言编写的文档的表示形式。CSS是与HTML、JavaScript 并存的万维网的基础技术。
 
 > CSS旨在使表示和内容（包括布局，颜色和字体）分离。这种分离可以提高内容的可访问性，在表示特征的规范中提供更大的灵活性和控制力，通过在单独的.css文件中指定相关CSS ，使多个网页可以共享格式，并减少结构内容的复杂性和重复性。
 
@@ -52,8 +51,7 @@ JavaScript 并存的万维网的基础技术。
         <p style="color:red;">This is my first CSS example</p>
       </body>
 
-> **除非你有充足的理由，否则不要这样做！**它难以维护（在需要更新时，你必须在修改同一个文档的多处地方），并且这种写法将文档结构和文档表现混合起来了，
-这使得代码变得难以阅读和理解。将不同类型的代码分开存放在不同的文档中，会让我们的工作更加清晰。
+> **除非你有充足的理由，否则不要这样做！**它难以维护（在需要更新时，你必须在修改同一个文档的多处地方），并且这种写法将文档结构和文档表现混合起来了，这使得代码变得难以阅读和理解。将不同类型的代码分开存放在不同的文档中，会让我们的工作更加清晰。
 
 ## 当浏览器加载网页时
 
