--- a/_posts/2019-12-11-CSS之基础.md
+++ b/_posts/2019-12-11-CSS之基础.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:    123
+title:    CSS之基础
 subtitle:   简单的CSS
 date:       2019-12-11
 author:     One-Punch-Man
@@ -12,7 +12,7 @@ tags:
      
 ---
 
-# 什么是CSS？
+## 什么是CSS？
 
 > CSS又叫层叠样式表（Cascading Style Sheets），它是一种样式表语言，用于描述以HTML之类的标记语言编写的文档的表示形式。CSS是与HTML、JavaScript 并存的万维网的基础技术。
 
