--- a/_posts/2019-12-11-CSS之基础.md
+++ b/_posts/2019-12-11-CSS之基础.md
@@ -1,13 +1,13 @@
 ---
 layout:     post
-title:    我的CSS道路之基础篇
-subtitle:   简单的CSS
-date:       2019-12-11
+title:     HTML之基础1
+subtitle:   简单的HTML1
+date:       2019-12-2
 author:     One-Punch-Man
 header-img: "img/man-4.jpg"
 catalog: true
 tags: 
-     - CSS
+     - HTML
      - 前端
      
 ---
