--- a/_posts/2019-12-11-CSS之简单认识.md
+++ b/_posts/2019-12-11-CSS之简单认识.md
@@ -1,16 +1,17 @@
 ---
 layout:     post
-title:     HTML之基础1
-subtitle:   简单的HTML1
-date:       2019-12-2
+title:     css之基本认识
+subtitle:   和css的第一次见面
+date:       2019-11-29
 author:     One-Punch-Man
-header-img: "img/man-4.jpg"
+header-img: "img/man-3.jpg"
 catalog: true
 tags: 
-     - HTML
-     - 前端
-     
+     - Git
+     - CSS
 ---
+
+
 
 ## 什么是CSS？
 
