--- a/_posts/2019-12-11-CSS之简单认识.md
+++ b/_posts/2019-12-11-CSS之简单认识.md
@@ -15,7 +15,7 @@ tags:
 
 ## 什么是CSS？
 
-> CSS又叫层叠样式表（Cascading Style Sheets），它是一种样式表语言，用于描述以HTML之类的标记语言编写的文档的表示形式。CSS是与HTML、JavaScript 并存的万维网的基础技术。
+> CSS又叫层叠样式表（Cascading Style Sheets），它是一种样式表语言，用于描述以HTML之类的标记语言编写的文档的表示形式。CSS是与HTMLJavaScript 并存的万维网的基础技术。
 
 > CSS旨在使表示和内容（包括布局，颜色和字体）分离。这种分离可以提高内容的可访问性，在表示特征的规范中提供更大的灵活性和控制力，通过在单独的.css文件中指定相关CSS ，使多个网页可以共享格式，并减少结构内容的复杂性和重复性。
 
@@ -67,8 +67,6 @@ tags:
 5. 将渲染树放置在规则应用到其后应出现的结构中。
 
 6. 页面的视觉显示在屏幕上显示（此阶段称为绘画）。
-
-![load](https://mdn.mozillademos.org/files/11781/rendering.svg)
 
 ## CSS的特性
 
