--- a/_posts/2019-12-11-CSS之简单认识.md
+++ b/_posts/2019-12-11-CSS之简单认识.md
@@ -21,5 +21,6 @@ tags:
 
 > 格式和内容的分离还使得针对不同的呈现方法（例如，在屏幕上，在印刷中，通过语音（通过基于语音的浏览器或屏幕阅读器）以及基于盲文的字体）以不同的样式呈现相同的标记页面变得可行。触觉设备。如果在移动设备上访问内容，CSS还具有其他格式的规则。
 
+## 使用CSS的三种方法
 
-
+* 外部样式表：外部样式表是指将CSS编写在扩展名为`.css`的单独文件中，并从`HTML<link>`元素引用它的情况：
