--- a/_posts/2019-12-11-CSS之简单认识.md
+++ b/_posts/2019-12-11-CSS之简单认识.md
@@ -31,4 +31,25 @@ tags:
       <link rel="stylesheet" href="你写的css文件名.css">
     </head>
 
+## CSS的特性
+
+### 层叠性
+
+> 当应用两个具有相同特异性的规则时，将在CSS中排在最后的那个将被使用。这意味着CSS规则的顺序很重要。
+
+### 特异性
+
+当有多条规则应用在同一个标签上时，那么浏览器要选择应用哪一条规则在标签上呢？这里就存在特异性。
+
+### 继承性
+
+当标签进行多层嵌套时，里面的标签可能会应用父标签的属性，也可能不会，这就涉及到了CSS的继承性。
+
+#### 继承的控制
+
+* `inherit`:将应用于选定元素的属性值设置为其父元素的属性值。
+
+* `initial`:可用于将CSS属性恢复到其初始状态。
+
+* `unset`:修改该属性的值为其父元素的值(如果有继承)或其初始值。
 
