--- a/_posts/2019-12-11-CSS之简单认识.md
+++ b/_posts/2019-12-11-CSS之简单认识.md
@@ -31,6 +31,30 @@ tags:
       <link rel="stylesheet" href="你写的css文件名.css">
     </head>
 
+* 内部样式表：内部样式表是指不使用外部CSS文件，而是将CSS放在HTML文件`<head>`标签里的`<style>`标签之中。
+  
+    <head>
+      <meta charset="utf-8">
+      <title>My CSS experiment</title>
+      <style>
+        h1 {
+          color: blue;
+          background-color: yellow;
+          border: 1px solid black;
+        }
+      </style>
+    </head>
+    
+* 内联样式：存在于HTML元素的style属性之中。其特点是每个CSS表只影响一个元素：
+
+      <body>
+        <h1 style="color: blue;background-color: yellow;border: 1px solid black;">Hello World!</h1>
+        <p style="color:red;">This is my first CSS example</p>
+      </body>
+
+> **除非你有充足的理由，否则不要这样做！**它难以维护（在需要更新时，你必须在修改同一个文档的多处地方），并且这种写法将文档结构和文档表现混合起来了，这使得代码变得难以阅读和理解。将不同类型的代码分开存放在不同的文档中，会让我们的工作更加清晰。
+
+
 ## CSS的特性
 
 ### 层叠性
