--- a/_posts/2019-12-11-CSS之简单认识.md
+++ b/_posts/2019-12-11-CSS之简单认识.md
@@ -54,6 +54,21 @@ tags:
 
 > **除非你有充足的理由，否则不要这样做！**它难以维护（在需要更新时，你必须在修改同一个文档的多处地方），并且这种写法将文档结构和文档表现混合起来了，这使得代码变得难以阅读和理解。将不同类型的代码分开存放在不同的文档中，会让我们的工作更加清晰。
 
+## 当浏览器加载网页时
+
+1. 浏览器加载HTML。
+
+2. 它将HTML转换为DOM（文档对象模型）。DOM表示计算机内存中的文档。
+
+3. 然后，浏览器将获取HTML文档链接的大多数资源，例如嵌入式图像和视频...以及链接的CSS，再稍微的处理javascript！
+
+4. 浏览器解析提取的CSS，并根据选择器类型将不同的规则分类为不同的“存储桶”，例如元素，类，ID等。根据找到的选择器，它确定应将哪些规则应用于DOM中的哪些节点，并根据需要向其附加样式（此中间步骤称为渲染树）。
+
+5. 将渲染树放置在规则应用到其后应出现的结构中。
+
+6. 页面的视觉显示在屏幕上显示（此阶段称为绘画）。
+
+![load](https://mdn.mozillademos.org/files/11781/rendering.svg)
 
 ## CSS的特性
 
