--- a/_posts/2019-12-21-HTML之基础.md
+++ b/_posts/2019-12-21-HTML之基础.md
@@ -2,7 +2,7 @@
 layout:     post
 title:     HTML之基础
 subtitle:   简单的HTML
-date:       2019-12-2
+date:       2019-12-21
 author:     One-Punch-Man
 header-img: "img/man-4.jpg"
 catalog: true
@@ -67,7 +67,7 @@ tags:
 `name`指定了`meta`元素的类型；说明该元素包含了什么类型的信息。`content`指定了实际的元数据内容。
 
    > `name = "author"`指定作者在某些情况下是很有用的：如果你需要联系页面的作者，问一些关于页面内容的问题。 一些内容管理系统能够自动获取页面作者的信息，然后用于某些用途。
-     
+  
    > `name="description"`指定包含关于页面内容的关键字的页面内容的描述是很有用的，因为它可能或让你的页面在搜索引擎的相关的搜索出现得更多（这些行为术语上被称为 Search Engine Optimization, or SEO.）
 
 * `<link rel="stylesheet" type="text/css" href=""/>`导入css样式文件。`<link>`元素经常位于文档的头部，`rel="stylesheet"`表明这是文档的样式表，而`href`包含了样式表文件的路径.
@@ -100,7 +100,7 @@ tags:
 * `<figure>`标签代表一段独立的内容, 经常与说明标签`<figcaption>`配合使用, 并且作为一个独立的引用单元。这个标签经常是用在主文中引用的图片，插图，表格，代码段等等，当这部分转移到附录中或者其他页面时不会影响到主体。
 
 * `<figcaption>`标签是与其相关联的图片的说明/标题，用于描述其父节点`<figure>`元素里的其他数据。这意味着`<figcaption>`在`<figure>`块里是第一个或最后一个。同时 HTML Figcaption 元素是可选的；如果没有该元素，这个父节点的图片只是会没有说明/标题,对于`<figure>`中的其它事物是没有影响的。
-     
+  
      例如：
           
           <figure>
@@ -110,7 +110,7 @@ tags:
                height="171">
             <figcaption>曼彻斯特大学博物馆展出的一只霸王龙的化石</figcaption>
           </figure>
-      
+     
      输出：
      
  ![example001](/img/example001.png) 
@@ -126,16 +126,16 @@ tags:
 
 * `<form>`:定义一个表单，所有的表单内容都书写在`<form></form>`中。`action` 属性定义了在提交表单时,应该把所收集的数据送给谁(URL)去处理。
  `method`属性定义了发送数据的HTTP方法(它可以是“get”或“post”)。
- 
+
  * `<fieldset>`:通常用来对表单中的控制元素进行分组(也包括`label`元素)。
- 
+
  * `<legend>`:表示它的父元素`<fieldset>`所书写的的内容的标题。
- 
+
  * `<label>`:标签里面可以书写文本，通常与`<input>`连用。当你想点击`<label>`标签包裹的本文来激活`<input>`标签时，你需要给`<input>`一个`id`属性，并且`<label>`需要一个`for`属性，其值和`input`的`id`一样。
 
 * `<input>`是使在当前位置定义一个输入框。
      * `type`属性可以定义输入框里面输入的内容形式。当`type`的值为：
-          
+       
           * `button`：无缺省行为按钮。（一个只可以点击，但是什么作用都没有的按钮！）
           
           * `checkbox`： 复选框。必须使用`value`属性定义此控件被提交时的值。使用`checked`属性指示控件是否被选择。
@@ -163,7 +163,7 @@ tags:
           * `password`：一个值被遮盖的单行文本字段,用于输入密码。使用`maxlength`指定可以输入的值的最大长度 。                     
           
           * `range`：用于输入不精确值控件。如果未指定相应的属性，控件使用如下缺省值：
-               
+            
                * `min`：0
                
                * `max`：100
@@ -171,7 +171,7 @@ tags:
                * `value`：`min`+(`max`-`min`)/2，或当`max`小于`min`时使用`min`
                
                * `step`(用来设置关于数字的组件的步进值得大小)：1
-         
+             
           * `reset`：用于将表单所内容设置为缺省值的按钮。
           
           * `search`：用于输入搜索字符串的单行文本字段。换行会自动跳出`<input>`组件，并进行跳转。
@@ -189,7 +189,7 @@ tags:
           * `week`：用于输入一个由星期-年组成的日期，日期不包括时.      
           
           > **省缺值又叫默认值。**
-              
+          
      * `placeholder`: 这是文本输入框中会出现的文本，以虚的文本形式出现，用来简略描述输入框的目的。
      
      * `disabled = "disabled"`（布尔属性类型，他们只能有跟它的属性名一样的属性值。）可以让输入框变为状态(变灰色)，此时用户不能向他们输入任何数据。
@@ -200,16 +200,16 @@ tags:
      
      * `autofocus="autofocus`:如果`<input>`标签里存在此属性，当表单被呈现在网页上时，焦点会自动落在这一个`<input>`元素上
      
-     * `form`:	如果`<input>`存在`form`属性，它表示此元素属于一个`<form>`表单，此`<form>`表单的`id`就是属性的值，如果不存在`form`属性，在页面上有`<form>`表单的情况下，`<input>`元素会属于最近的一个`<form>`表单。
+     	 `form`:	如果`<input>`存在`form`属性，它表示此元素属于一个`<form>`表单，此`<form>`表单的`id`就是属性的值，如果不存在`form`属性，在页面上有`<form>`表单的情况下，`<input>`元素会属于最近的一个`<form>`表单。
      
-     * `list`:	指向一个`id`为`list`属性值的`<datalist>`元素，`<datalist>`为这个`<input>`元素提供建议值。
+     	 `list`:	指向一个`id`为`list`属性值的`<datalist>`元素，`<datalist>`为这个`<input>`元素提供建议值。
      
      * `name`: `<input>`的名字，在提交整个表单数据时，可以用于区分属于不同`<input>`的值
      
      * `required="required"`:表示只有当此`<input>`元素有值时，整个表单才能提交    
      
      * `value`:`<input>`的默认值。
-         
+       
      
 * `<textarea>`:表示一个多行纯文本编辑控件。它与`<input>`的区别在于它允许用户在文本框输入**换行符**却不会退出文本框。`<textarea>`的属性有：
 
@@ -250,19 +250,19 @@ tags:
 * `<datalist>`:`<input>`提供若干选项（`<option>`）,它的选项用于自动完成用户输入的文本;通常，这是作为一个下拉框提供给用户的，匹配在输入框中输入了的内容。`id`的值和`<input>`中`list`的值保持一样。
 
 * `<button>`:表示一个可点击的按钮，可以用在表单或文档其它需要使用简单标准按钮的地方。他的属性有：
-     
+  
      * `name`:`button`的名称，与表单数据一起提交。
      
      * `value`:`button`的初始值。它定义的值与表单数据的提交按钮相关联。当表单中的数据被提交时，这个值便以参数的形式被递送至服务器。
      
      * `type`:`button`的类型。
-          
+       
           * `submit`:此按钮将表单数据提交给服务器。如果未指定属性，或者属性动态更改为空值或无效值，则此值为默认值。
           
           * `reset`:此按钮重置所有组件为初始值。
           
           * `button`:此按钮没有默认行为。
-          
+     
 * `<progress>`:显示一项任务的完成进度.`max`表示进度条的大小，`value`表示你完成的任务量。
 
 * `<script>`元素没必要非要放在文档头部；实际上，把它放在文档的尾部（在`</body>`标签之前）是一个更好的选择，这样可以确保在加载脚本之前浏览器已经解析了`HTML`内容（如果脚本加载某个不存在的元素，浏览器会报错）。
@@ -308,7 +308,7 @@ tags:
      4. 在第三个十字路口处左转
      
      5. 继续走 300 米，学校就在你的右手边
-         
+        
      
 * `<table>`:把你所写的表格内容包裹在`<table>`、`</table>`中。
 
@@ -346,12 +346,12 @@ tags:
               <td>Jazz</td>
             </tr>
           </table>
-     
+
    输出：
    ![example002](/img/example002.png)
-   
+
  * `<caption>`作用是展示一个表格的标题， 它常常作为`<table>`的第一个子元素出现，同时显示在表格内容的最前面，但是，它同样可以被CSS样式化，所以，它同样可以出现在任何一个一个相对于表格的做任意位置。
- 
+
  
 
 * `<u>`被用来传达传统上用下划线表达的意义：专有名词，拼写错误……**在Web上，最好只在链接上使用下划线。**
@@ -369,7 +369,7 @@ tags:
 * `<dt>`：描述列表的描述术语（description terms）。一个`<dt>`可以同时有多个描述`<dd>`。
 
 * `<dd>`：描述列表的描述部分（description description）。
-     
+  
      > 浏览器的默认样式会在描述列表的描述部分（description description）和描述术语（description terms）之间产生缩进。
      
      例如：
@@ -383,9 +383,9 @@ tags:
               <dd>一种浅棕色的饮料。</dd>
               <dd>可以在清晨带来活力。</dd>
           </dl>
-      
+     
      会输出：
-      
+     
       培根
           整个世界的粘合剂。
       鸡蛋
@@ -406,7 +406,7 @@ tags:
 * `<address>`：标记联系方式。`<address>`元素是为了标记编写HTML文档的人的联系方式，而不是任何其他的内容。
 
 * `<sup>`;`<sub>`:上标；下标标签。当你使用日期、化学方程式、和数学方程式时会偶尔使用上标和下标。
-     
+  
      例如：
 
           <p>咖啡因的化学方程式是 C<sub>8</sub>H<sub>10</sub>N<sub>4</sub>O<sub>2</sub>。</p>
@@ -448,28 +448,28 @@ tags:
 * > `<kbd>`:用于标记输入电脑的键盘（或其他类型）输入。
 
 * > `<samp>`:用于标记计算机程序的输出。
-     
+  
      例如：
           
           <pre><code>const para = document.querySelector('p');
-
+    
           para.onclick = function() {
             alert('噢，噢，噢，别点我了。');
           }</code></pre>
-
+    
           <p>请不要使用 <code>&lt;font&gt;</code> 、 <code>&lt;center&gt;</code> 等表象元素。</p>
-
+    
           <p>在上述的 JavaScript 示例中，<var>para</var> 表示一个段落元素。</p>
 
 
           <p>按 <kbd>Ctrl</kbd>/<kbd>Cmd</kbd> + <kbd>A</kbd> 选择全部内容。</p>
-
+    
           <pre>$ <kbd>ping mozilla.org</kbd>
           <samp>PING mozilla.org (63.245.215.20): 56 data bytes
           64 bytes from 63.245.215.20: icmp_seq=0 ttl=40 time=158.233 ms</samp></pre>
           
     输出：
-    
+
 
    ![code_print](/img/print.png)
 
@@ -527,7 +527,7 @@ tags:
               </footer>
             </body>
           </html>
-          
+     
      输出：
 ![page_1](/img/page_1.png)
 
