--- a/_posts/2020-3-15-Java的基础知识.md
+++ b/_posts/2020-3-15-Java的基础知识.md
@@ -10,3 +10,38 @@ tags:
      - Java
 ---
 
+
+
+
+
+
+
+# Java的基础知识
+
+## Java简介
+
+​	Java是由Sun Microsystems公司于1995年5月推出的一种编程语言。它是介于**编译型语言**和**解释型语言**之间的。**编译型语言**写的代码是直接编译成机器码然后执行，**解释型语言**可以由解释器直接加载源码然后运行，代价是**运行效率太低**。而Java是将代码编译成一种**“字节码”**，它类似于抽象的CPU指令，然后，针对不同平台编写虚拟机，不同平台的虚拟机负责加载字节码并执行，这样就实现了**“一次编写，到处运行”**的效果。随着Java的发展，它又分为Java SE（标准变）、Java EE（企业版）、Java ME（微型版）这三个版本 。Java SE是整个Java平台的核心，要进行Java Web开发又需要使用Java EE里面的知识。
+
+
+
+​	    						 ![java](D:\1423248687.github.io\img\java_01.png)
+
+
+
+### Java语言的特性
+
+- **面向对象**：Java语言提供类、接口和继承等面向对象的特性，为了简单起见，只支持类之间的单继承，但支持接口之间的多继承，并支持类与接口之间的实现机制（关键字为implements）。 Java语言是一个纯的面向对象程序设计语言。 
+- **分布式**：Java语言支持Internet应用的开发，在基本的Java应用编程接口中有一个网络应用编程接口（java net），它提供了用于网络应用编程的类库，包括URL、URLConnection、Socket、ServerSocket等。Java的RMI（远程方法激活）机制也是开发分布式应用的重要手段。 
+- **健壮**：Java的强类型机制、异常处理、垃圾的自动收集等是Java程序健壮性的重要保证。对指针的丢弃是Java的明智选择。Java的安全检查机制使得Java更具健壮性。 
+- **安全**：Java通常被用在网络环境中，为此，Java提供了一个安全机制以防恶意代码的攻击。除了Java语言具有的许多安全特性以外，Java对通过网络下载的类具有一个安全防范机制（类ClassLoader），如分配不同的名字空间以防替代本地的同名类、字节代码检查，并提供安全管理机制（类SecurityManager）让Java应用设置安全哨兵。 
+- **跨平台**：Java 是“一次编写，到处运行（Write Once，Run any Where）”的语言，因此采用 Java 语言编写的程序具有很好的可移植性，而保证这一点的正是 Java 的虚拟机机制。在引入虚拟机之后，Java 语言在不同的平台上运行不需要重新编译。 
+- **可移植性**：这种可移植性来源于体系结构中立性，另外，Java还严格规定了各个基本数据类型的长度。Java系统本身也具有很强的可移植性，Java编译器是用Java实现的，Java的运行环境是用ANSI C实现的。 
+- **高性能**：与那些解释型的高级脚本语言相比，Java的确是高性能的。事实上，Java的运行速度随着JIT(Just-In-Time）编译器技术的发展越来越接近于C++。 
+- **多线程**：在Java语言中，线程是一种特殊的对象，它必须由Thread类或其子（孙）类来创建。通常有两种方法来创建线程：其一，使用型构为Thread(Runnable)的构造子类将一个实现了Runnable接口的对象包装成一个线程，其二，从Thread类派生出子类并重写run方法，使用该子类创建的对象即为线程。值得注意的是Thread类已经实现了Runnable接口，因此，任何一个线程均有它的run方法，而run方法中包含了线程所要运行的代码。线程的活动由一组方法来控制。Java语言支持多个线程的同时执行，并提供多线程之间的同步机制（关键字为synchronized）。 
+- **动态**：Java语言的设计目标之一是适应于动态变化的环境。Java程序需要的类能够动态地被载入到运行环境，也可以通过网络来载入所需要的类。这也有利于软件的升级。另外，Java中的类有一个运行时刻的表示，能进行运行时刻的类型检查。 
+
+### JDK与JRE
+
+​	JRE(Java Runtime Environment )，也叫**Java运行环境**，就相当于运行**Java字节码**文件的**虚拟机**（JVM）。但是，如果只有Java源码，要编译成Java字节码，就需要**JDK**(Java Development Kit )，因为JDK除了包含JRE，还提供了编译器、调试器等开发工具。 
+
+​			![jdk](D:\1423248687.github.io\img\java_02.png)
