--- a/_posts/2020-3-15-Java的基础知识.md
+++ b/_posts/2020-3-15-Java的基础知识.md
@@ -24,7 +24,7 @@ tags:
 
 
 
-​	    						 ![java](D:\1423248687.github.io\img\java_01.png)
+​	    						 ![java](/img/java_01.png)
 
 
 
@@ -44,4 +44,4 @@ tags:
 
 ​	JRE(Java Runtime Environment )，也叫**Java运行环境**，就相当于运行**Java字节码**文件的**虚拟机**（JVM）。但是，如果只有Java源码，要编译成Java字节码，就需要**JDK**(Java Development Kit )，因为JDK除了包含JRE，还提供了编译器、调试器等开发工具。 
 
-​			![jdk](D:\1423248687.github.io\img\java_02.png)
+​			![jdk](/img/java_02.png)
