--- a/_posts/2020-3-15-Java的基础知识.md
+++ b/_posts/2020-3-15-Java的基础知识.md
@@ -45,3 +45,125 @@ tags:
 ​	JRE(Java Runtime Environment )，也叫**Java运行环境**，就相当于运行**Java字节码**文件的**虚拟机**（JVM）。但是，如果只有Java源码，要编译成Java字节码，就需要**JDK**(Java Development Kit )，因为JDK除了包含JRE，还提供了编译器、调试器等开发工具。 
 
 ​			![jdk](/img/java_02.png)
+
+#### JDK的安装
+
+​	首先从[Oracle官网](<https://www.oracle.com/java/technologies/javase-downloads.html> )下载你JDK安装包，在安装的时候**安装路径中切记不要出现空格以及中文**。安装完成以后，需要在Path环境变量中添加JDK的环境，它指向你安装的JDK安装目录下的`bin`目录下，例如：
+
+```
+在我的电脑里面的环境变量path中添加：
+C:\Program Files\Java\jdk1.8.0_111\bin;
+```
+
+​	设置完环境变量后，打开`cmd`输入命令：`java -version `，就可以看到
+
+```
+C:\Users\admin>java -version
+java version "1.8.0_181"
+Java(TM) SE Runtime Environment (build 1.8.0_181-b13)
+Java HotSpot(TM) 64-Bit Server VM (build 25.181-b13, mixed mode)
+```
+
+#### JDK的目录介绍
+
+- `bin`目录：Java工具的可执行文件，包括: java、Java编译器javac、反编译.class文件javap、密钥管理工具keytool、Java文档工具javadoc等。 
+
+- `db`目录：Java实现的数据库。 
+
+- `include`目录：.存放调用系统资源的接口文件 
+
+- `lib`目录： Java类库，我们经常看到的`dt.jar`和`tools.jar`就在这个目录下。 
+
+- `src.zip`文件：Java类库源码，包括了rt.jar库中的关键部分；除了Java类库，还包含了启动器（launcher）的源码（C语言实现）。 
+
+- `jre`目录：Java运行环境。
+
+## 从零走进Java
+
+##### 最最最简单的Hello World！	
+
+```java
+public class Hello {
+    public static void main(String[] args) {
+        System.out.println("Hello, world!");
+    }
+}
+```
+
+### 变量与数据类型
+
+#### 变量
+
+​	变量是指JVM在内存中分配的一个**存储区域**，该区域存放变量的变量名以及数据类型，该区域的数据可以在同一数据类型的范围内不断变化值。每个变量都有自己的作用范围，叫**作用域**(一对{}之间)	。在Java中，变量分为两种：**基本类型**的变量和**引用类型**的变量。
+
+​	 变量必须先定义后使用，在定义变量的时候，可以给它一个初始值；如果不写初始值，就相当于给它指定了默认值。默认值总是`0`。 在`main()`方法中声明的变量叫做**局部变量**，局部变量作用范围是：**从声明开始到方法体结束**。
+
+​	变量的命名规范：
+
+- 以下划线、字母、美元符开头。 
+
+- 后面跟下划线、字母、美元符以及数字。 
+
+- 不能是Java中的关键字。
+
+- 大小写敏感，且没有长度限制，但也不宜太长。
+
+- 建议使用驼峰命名法。
+
+#### 数据类型
+
+##### 基本数据类型(8种)
+
+- 整数类型：byte(1字节)，short(2字节)，int(4字节)，long(8字节)
+
+- 浮点数类型：float(4字节)，double(8字节)
+
+- 字符类型：char(2字节)
+
+- 布尔类型：boolean(1bit)
+
+  ​	计算机内存的最小存储单元是字节（`byte`），一个字节就是一个8位二进制数，即8个`bit`。它的二进制表示范围从`00000000`~`11111111`，换算成十进制是0~255，换算成十六进制是`00`~`ff`。 
+
+##### 整型
+
+​	整型是用来表示整数的基本数据类型，根据分配的空间大小又分为：	
+
+|    数据类型     |   空间大小    |                 取值范围                 |
+| :-------------: | :-----------: | :--------------------------------------: |
+| byte（字节型）  | 8位，1个字节  |                 -128~127                 |
+| short（短整型） | 16位，2个字节 |               -32768~32767               |
+|   int（整型）   | 32位，4个字节 |          -2147483648~2147483647          |
+| long（长整型）  | 64位，8个字节 | -9223372036854775808~9223372036854775807 |
+
+##### 浮点型
+
+​	浮点型就是用来显示小数的基本数据类型。
+
+|        数据类型        |   空间大小    |             取值范围             |
+| :--------------------: | :-----------: | :------------------------------: |
+| float（单精度浮点型）  | 32位、4个字节 |      1.4E-45~3.4028235-E38       |
+| double（双精度浮点型） | 64位、8个字节 | 4.9E-324~1.7976931348623157E-308 |
+
+##### 字符类型
+
+​	字符类型为表示单个字符的基本数据类型，字符类型用来保存单个字符或者汉字。
+
+##### 布尔类型
+
+​	布尔类型是用来逻辑状态（`true`或者`false`）的基本数据类型。理论上存储布尔类型只需要`1 bit`，但是通常JVM内部会把`boolean`表示为`4 byte`整数。 
+
+##### 常量
+
+​	再定义变量的时候，如果加上`final`修饰符，那么定义的这个变量就成为了常量。`final double PI = 3.14;`常量在定义时进行初始化后就**不**可再次赋值，再次赋值会导致**编译错误**。 根据习惯，常量名通常全部大写。 
+
+#### 类型转化
+
+​	把一种数据类型转化为另一种数据类型的过程叫做类型转化。
+
+##### 基本类型转化
+
+##### 引用类型转化
+
+##### 基本类型与引用类型之间的转化
+
+​	Java中的基本类型转化分为**自动类型转化**和**强制类型转化**。根据取值范围的大小，把八种数据类型分为低级到高级，又低级的数据类型转化为高级的数据类型被称作为自动类型转化，又高级的数据类型转化为低级的数据类型被称作为强制类型转换。
