--- a/_posts/2020-3-15-Java的基础知识.md
+++ b/_posts/2020-3-15-Java的基础知识.md
@@ -161,9 +161,84 @@ public class Hello {
 ​	把一种数据类型转化为另一种数据类型的过程叫做类型转化。
 
 ##### 基本类型转化
+​	Java中的基本类型转化分为**自动类型转化**和**强制类型转化**。根据取值范围的大小，把八种数据类型分为低级到高级，又低级的数据类型转化为高级的数据类型被称作为自动类型转化，又高级的数据类型转化为低级的数据类型被称作为强制类型转换；在转化过程中，如果原始类型的取值范围超出了目标类型的取值范围就会得到错误的结果。
+
+```java
+   //自动类型转化	 
+    short s = 1234;
+    int i = 123456;
+    int x = s + i; // s自动转型为int
+   //强制类型转化
+	int i = 12345;
+	short s = (short) i; // 12345
+```
 
 ##### 引用类型转化
 
+​	引用类型之间的转化只能发生在两个类型之间具有继承关系的前提下进行，就是说一个类型是另一个类型的子类类型。不具备继承关系的两个引用类型变量是不能进行引用类型转换的。否则程序会引发  `ClassCastException`异常。
+
+- 向上转型
+
+  把一个子类类型安全地变成父类类型的赋值操作，被称为向上转型（upcasting）；向上转型实际上是把一个子类型安全地转变为更加抽象的父类类型 。 
+    ```java
+  //继承关系：Student > Person > Object
+  Student s = new Student();
+  Person p = s; // upcasting, ok
+  Object o1 = p; // upcasting, ok
+  Object o2 = s; // upcasting, ok
+  
+    ```
+
+- 向下转型
+
+  和向上转型相反，如果把一个父类类型强制转型为子类类型，就是向下转型（downcasting）。 再向下转型的时候可能会转型失败，然后Java虚拟机会报一个`ClassCastException`。
+
+```java
+//继承关系：Student > Person > Object
+Person p1 = new Student(); // upcasting, ok
+Person p2 = new Person();
+Student s1 = (Student) p1; // ok
+Student s2 = (Student) p2; // runtime error! ClassCastException!
+```
+
+​	  为了避免向下转型出错，Java提供了`instanceof`操作符，可以先判断一个实例究竟是不是属于某种类型或者这一类型的子类。
+
+```java
+//继承关系：Student > Person > Object
+Person p = new Person();
+Student s = new Student();
+System.out.println(p instanceof Person); // true
+System.out.println(p instanceof Student); // false
+System.out.println(s instanceof Person); // true
+```
+
+​	所以如果要进行向下转型，可以：
+
+```java
+Person p = new Student();
+if(p instanceof Student){
+    Student s = (Student) p;//true
+}
+```
+
+
+
 ##### 基本类型与引用类型之间的转化
 
-​	Java中的基本类型转化分为**自动类型转化**和**强制类型转化**。根据取值范围的大小，把八种数据类型分为低级到高级，又低级的数据类型转化为高级的数据类型被称作为自动类型转化，又高级的数据类型转化为低级的数据类型被称作为强制类型转换。
+- 自动装箱：编译器调用ValueOf()自动将基本数据类型转换为引用类型 。
+
+- 自动拆箱：编译器调用intValue(),doubleValue() 这些方法自动将引用类型转换为基本数据类型。 
+
+  | 基本数据类型 | 引用类型  |
+  | :----------: | :-------: |
+  |     byte     |   Byte    |
+  |    short     |   Short   |
+  |     int      |  Integer  |
+  |     long     |   Long    |
+  |    float     |   Float   |
+  |    double    |  Double   |
+  |     char     | Character |
+  |   boolean    |  Boolean  |
+
+  
+
